--- a/package.json
+++ b/package.json
@@ -2,9 +2,23 @@
   "name": "lit-devpack",
   "version": "1.0.0",
   "description": "Lit boiler plate with webpack and Typescript",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "repository": "https://github.com/jason-horvath/lit-devpack",
   "author": "Jason Horvath",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "scripts": {
+    "serve": "webpack serve"
+  },
+  "dependencies": {
+    "lit": "^2.2.7"
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^5.5.0",
+    "ts-loader": "^9.3.1",
+    "typescript": "^4.7.4",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3"
+  }
 }
